# cpunchline-hub

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  MAINTAINERS  README.md  rebuild.sh
application/: CMakeLists.txt
application/RPC/: rpc.h
application/asio_study/: CMakeLists.txt  asio_study.cpp
application/concurrentqueue_study/: CMakeLists.txt  concurrentqueue_study.cpp
application/czmq_study/: CMakeLists.txt  czmq_study.c
application/demo/: CMakeLists.txt
application/demo/inc/: demo.h
application/demo/src/: demo.c
application/hotreload/: CMakeLists.txt
application/hotreload/inc/: hotreload.h  plug.h
application/hotreload/src/: custom_plug.c  hotreload.c  main.c
application/lmdb_study/: CMakeLists.txt  lmdb_study.c
application/lockfree_mpmc_queue_study/: CMakeLists.txt  lockfree_mpmc_queue_study.cpp
application/modern_cpp_study/: CMakeLists.txt
application/modern_cpp_study/ConcurrentProgramming/: atomic.hpp  cond.hpp  mutex.hpp  thread.hpp
application/modern_cpp_study/Templete/: CMakeLists.txt  CRTP.hpp  ClassTemplete.hpp  FullSpecialization.hpp  FuncationTemplete.hpp  PartialSpecialization.hpp  SplitFiles.hpp  VariableTemplete.hpp  test_Templete.cpp
application/modern_cpp_study/error_code/: CMakeLists.txt  error_code.cpp
application/modern_cpp_study/local_variable_init/: CMakeLists.txt  local_variable_init.cpp
application/modern_cpp_study/memory_resource/: CMakeLists.txt  memory_resource.cpp
application/modern_cpp_study/random/: CMakeLists.txt  random.cpp
application/modern_cpp_study/reflection/: CMakeLists.txt  enum_reflection.cpp
application/mosquitto_study/: CMakeLists.txt  mosquitto_local_client.c
application/nng_study/: CMakeLists.txt  nng_bus_study.c  nng_pair_async_adapter_study.cpp  nng_pair_async_manager_study.cpp  nng_pair_study.c  nng_pipeline_study.c  nng_pubsub_study.c  nng_reqresp_study.c  nng_survey_study.c
application/openssl_study/: CMakeLists.txt
application/openssl_study/inc/: openssl_asym_cipher.h  openssl_base64.h  openssl_cipher.h  openssl_mac.h  openssl_md.h  openssl_pkey.h  openssl_print.h  openssl_rand.h  openssl_ssl_tls.h  openssl_study.h
application/openssl_study/src/: openssl_asym_cipher.c  openssl_base64.c  openssl_cipher.c  openssl_mac.c  openssl_md.c  openssl_pkey.c  openssl_print.c  openssl_ssl_tls.c  openssl_study.c
application/sqlite_study/: CMakeLists.txt  sqlite3_study.c
application/tcp_study/: CMakeLists.txt  tcp_study_program_a.c  tcp_study_program_b.c  tcp_tempest_program.cpp
application/zmq_study/: CMakeLists.txt  README.md
application/zmq_study/client/: zmq_test_client.c
application/zmq_study/proxy/: zmq_test_proxy.c
application/zmq_study/server/: zmq_test_server.c
base/: CMakeLists.txt  README.md
base/inc/: platform.h
base/inc/dsa/: avl.h  avl_uid.h  base64.h  crc.h  darray.h  deque.h  heap.h  list.h  lstack.h  md5.h  rbtree.h  ringbuffer.h  safe_list.h  sha1.h  vlist.h  xstring.h
base/inc/hpp/: LRUCache.hpp  ObjectPool.hpp  Singleton.hpp  SyncContextPool.hpp  SyncContextPool_UPDATE_LOG.md  Thread.hpp  ThreadPool.hpp  ThreadQueue.hpp  TimerCluster.hpp
base/inc/stb/: arena.h
base/inc/utility/: debug_backtrace.h  fsm.h  objectpool.h  syncctxpool.h  threadpool.h  threadqueue.h  timercluster.h  utils.h  utils_generated.h
base/src/dsa/: avl.c  avl_uid.c  base64.c  crc.c  md5.c  rbtree.c  ringbuffer.c  sha1.c  vlist.c
base/src/utility/: debug_backtrace.c  objectpool.c  syncctxpool.c  threadpool.c  threadqueue.c  timercluster.c  utils.c
lib/ipc_hv/: CMakeLists.txt
lib/ipc_hv/client/: ipc_hv_client.c  ipc_hv_server.c
lib/ipc_hv/inc/: ipc_hv.h
lib/ipc_hv/src/: ipc_hv.c
lib/ipc_nng/: CMakeLists.txt
lib/ipc_nng/client/: ipc_nng_app1.c  ipc_nng_app2.c  ipc_nng_manager.c
lib/ipc_nng/inc/: ipc_nng.h
lib/ipc_nng/src/: ipc_nng.c
lib/ipc_nng_long/: CMakeLists.txt
lib/ipc_nng_long/client/: ipc_nng_long_app1.c  ipc_nng_long_app2.c
lib/ipc_nng_long/daemon/: ipc_nng_long_daemon.c
lib/ipc_nng_long/inc/: ipc_nng_long.h  ipc_nng_long_daemon.hpp  ipc_nng_long_inn.hpp
lib/ipc_nng_long/src/: ipc_nng_long.cpp  ipc_nng_long_daemon.cpp  ipc_nng_long_inn.cpp
lib/ipc_zmq/: CMakeLists.txt
lib/ipc_zmq/client/: ipc_zmq_app1.c  ipc_zmq_app2.c  ipc_zmq_manager.c
lib/ipc_zmq/inc/: ipc_zmq.h  ipc_zmq_inn.h
lib/ipc_zmq/src/: ipc_zmq.c  ipc_zmq_inn.c
lib/local_registry/: CMakeLists.txt
lib/local_registry/client/: ipc_hv_soa_client1.c  ipc_hv_soa_client2.c
lib/local_registry/ctrl/: local_registry_ctrl.cpp
lib/local_registry/daemon/: local_registry.cpp  local_registry.hpp  local_registry_logic.cpp
lib/local_registry/docs/: RPC-微服务架构.md
lib/local_registry/inc/: UdsClient.hpp  UdsServer.hpp  local_registry_common.hpp
lib/local_registry/json/: ipc_hv_soa_client1_module.json  ipc_hv_soa_client2_module.json  local_registry_module.json
lib/local_registry/lib/: ipc_hv_soa.cpp  ipc_hv_soa.h  ipc_hv_soa_common.hpp  ipc_hv_soa_inn.cpp  ipc_hv_soa_inn.hpp  ipc_hv_soa_inn_io.cpp  ipc_hv_soa_inn_map.cpp  ipc_hv_soa_inn_timer.cpp  ipc_hv_soa_io.cpp  ipc_hv_soa_map.cpp  ipc_hv_soa_rpc.cpp  ipc_hv_soa_timer.cpp
lib/local_registry/lib_next/: ipc_hv_soa_common.cpp  ipc_hv_soa_daemon.cpp  ipc_hv_soa_localcache.cpp  ipc_hv_soa_manager.cpp  ipc_hv_soa_manager.hpp  ipc_hv_soa_process.cpp
lib/shm/: CMakeLists.txt
lib/shm/inc/: shm.h  shm_block.h
lib/shm/src/: shm.c
simulator/base_test/: CMakeLists.txt  LRUCache_test.cpp  ObjectPool_test.cpp  Singleton_test.cpp  SyncContextPool_test.cpp  ThreadPool_test.cpp  ThreadQueue_test.cpp  Thread_test.cpp  TimerCluster_test.cpp  arena_test.c  avl_test.c  avl_uid_test.c  darray_test.c  debug_backtrace_test.c  deque_test.c  fsm_test.c  heap_test.c  list_test.c  lstack_test.c  objectpool_test.c  rbtree_test.c  ringbuffer_test.c  shm_test.c  test_test.c  threadpool_test.c  threadqueue_test.c  timercluster_test.c  xstring_test.c
tests/: CMakeLists.txt  test.cpp
tools/pre_built/: CMakeLists.txt
tools/pre_built/lib/: libgmock.so.1.16.0  libnng.so.1  (+9 more)
(+78 files in other folders)
