if(LIB_ASIO_OPTION)
    add_subdirectory(asio_study)
endif()
if(LIB_CONCURRENTQUEUE_OPTION)
    add_subdirectory(concurrentqueue_study)
endif()
if(LIB_CZMQ_OPTION)
    add_subdirectory(czmq_study)
endif()
add_subdirectory(demo)
add_subdirectory(hotreload)
if(LIB_LMDB_OPTION)
    add_subdirectory(lmdb_study)
endif()
if(LIB_LOCKFREE_MPMC_QUEUE_OPTION)
    add_subdirectory(lockfree_mpmc_queue_study)
endif()
add_subdirectory(modern_cpp_study)
if(LIB_MOSQUITTO_OPTION)
    add_subdirectory(mosquitto_study)
endif()
if(LIB_NNG_OPTION)
    add_subdirectory(nng_study)
endif()
if(LIB_OPENSSL_OPTION)
    add_subdirectory(openssl_study)
endif()
add_subdirectory(RPC)
if(LIB_SQLITE_OPTION)
    add_subdirectory(sqlite_study)
endif()
add_subdirectory(tcp_study)
if(LIB_LIBZMQ_OPTION)
    add_subdirectory(zmq_study)
endif()
